force-app/main/default/objects/Transaction_Log__c/Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>This object is to capture details of all each batch execution</description>
    <label>Transaction Log</label>
    <nameField>
        <displayFormat>TXN -{0000000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>