force-app/main/default/objects/Transaction_Log__c/fields/Contract_Calc_Date_Effective__c.field-meta.xml
<CustomField>
    <fullName>Contract_Calc_Date_Effective__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(CreatedDate - 1))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(CreatedDate - 1))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate - 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Calc Date (Effective)</label>
    <type>Text</type>
</CustomField>