force-app/main/default/objects/Transaction_Log__c/fields/Created_Date_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Timestamp__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Timestamp)</label>
    <type>DateTime</type>
</CustomField>