force-app/main/default/objects/Transaction_Log__c/fields/Email_of_Record_Creator__c.field-meta.xml
<CustomField>
    <fullName>Email_of_Record_Creator__c</fullName>
    <description>Hidden formula field to store the email of the User who created the Transaction Log i.e. the one who approved the Invoice and invoked the Trigger.</description>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email of Record Creator</label>
    <type>Text</type>
</CustomField>