force-app/main/default/objects/Transaction_Log__c/fields/Finance_Aide_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_Aide_Email__c</fullName>
    <label>Finance Aide Email</label>
    <type>Email</type>
</CustomField>