force-app/main/default/objects/Transaction_Log__c/fields/Grant_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Grant_Solicitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Version</label>
    <referenceTo>Grant_Solicitation__c</referenceTo>
    <relationshipLabel>Transaction Logs</relationshipLabel>
    <relationshipName>Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>