force-app/main/default/objects/Transaction_Log__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>Helps identify the id (currently of project site, but maybe used to identify other object/processes in the future)</description>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>