force-app/main/default/objects/Transaction_Log__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Transaction Logs</relationshipLabel>
    <relationshipName>Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>