force-app/main/default/objects/Transaction_Log__c/fields/Program_Contact__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact__c</fullName>
    <formula>Grant_Solicitation__r.Default_Project_Coordinator__r.FirstName + &apos; &apos; +  Grant_Solicitation__r.Default_Project_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Contact</label>
    <type>Text</type>
</CustomField>