force-app/main/default/objects/Transaction_Log__c/fields/Program_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_Email__c</fullName>
    <formula>Grant_Solicitation__r.Default_Project_Coordinator__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Contact Email</label>
    <type>Text</type>
</CustomField>