force-app/main/default/objects/Transaction_Log__c/fields/Record_URL_By_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>Record_URL_By_CreatedById__c</fullName>
    <description>Formula field to generate URL on the basis of Created By user&apos;s org.</description>
    <formula>IF(ISBLANK( CreatedBy.ContactId ),
 $Label.Core_NYSERDA_Internal_URL ,
 $Label.CORE_Branded_NYSERDA_Portal_URL 
)  &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record URL By CreatedById</label>
    <type>Text</type>
</CustomField>