force-app/main/default/objects/Transaction_Log__c/fields/Referral_Lead_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Referral_Lead_Error_Message__c</fullName>
    <description>Formula field to be used on Email Template. This will have message conditionally.</description>
    <formula>IF( Total_Records_Flagged__c  &gt; 0, 
&quot;*** Action Required ***&quot; &amp; BR() &amp; &quot;One or more leads did not get uploaded properly and requires your attention. You can look at the errors by going to the Transaction Log.&quot; &amp; BR(),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Lead Error Message</label>
    <type>Text</type>
</CustomField>