force-app/main/default/objects/Transaction_Log__c/fields/SFDC_Report_URL_Multi_Line_Contract__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Report_URL_Multi_Line_Contract__c</fullName>
    <description>S-00403: Contracts Multiple Line Report is Report: SC Load - Under 200 - Multiple Line.</description>
    <formula>$Label.Core_NYSERDA_Internal_URL + $Setup.CORE_Constants_Setting__c.Contracts_Multiple_Line_Report_Id__c +
&apos;?pv0=&apos; + Contract_Calc_Date_Effective__c + 
&apos;&amp;pv1=&apos; + Grant_Solicitation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFDC Report URL (Multi Line Contract)</label>
    <type>Text</type>
</CustomField>