force-app/main/default/objects/Transaction_Log__c/fields/Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Status_Details__c</fullName>
    <description>Field to record Apex Error message if any.</description>
    <label>Status Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>