force-app/main/default/objects/Transaction_Log__c/fields/Total_Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Approved__c</fullName>
    <description>Total Amount Approved: Is the total on Invoice amount which were sent as part of this Transaction.</description>
    <label>Total Amount Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>