force-app/main/default/objects/Transaction_Log__c/fields/Total_Records_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Total_Records_Flagged__c</fullName>
    <label>Total Records Flagged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>