force-app/main/default/objects/Transaction_Log__c/fields/Total_Records_Sent_Successfully__c.field-meta.xml
<CustomField>
    <fullName>Total_Records_Sent_Successfully__c</fullName>
    <label>Total Records Sent Successfully</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>