force-app/main/default/objects/Transaction_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>Purchase Orders</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>SQA Extract</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>External Invoices</fullName>
            </value>
            <value>
                <fullName>Email Preferences Sync</fullName>
            </value>
            <value>
                <fullName>EJRegion</fullName>
            </value>
            <value>
                <fullName>Metrics</fullName>
            </value>
            <value>
                <fullName>Uplight Post</fullName>
            </value>
            <value>
                <fullName>Uplight Get</fullName>
            </value>
            <value>
                <fullName>Apex Sharing Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>