force-app/main/default/objects/Transaction_Log__c/fields/Uplight_Log_Status__c.field-meta.xml
<CustomField>
    <fullName>Uplight_Log_Status__c</fullName>
    <label>Uplight Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success Post Approved Project</fullName>
            </value>
            <value>
                <fullName>Failed Post Approved Project</fullName>
            </value>
            <value>
                <fullName>Modify and Resend Email Failures</fullName>
            </value>
            <value>
                <fullName>Resend Approved Project</fullName>
            </value>
            <value>
                <fullName>Success Pull/Get</fullName>
            </value>
            <value>
                <fullName>Failed Pull/Get</fullName>
            </value>
            <value>
                <fullName>Apex Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>