force-app/main/default/objects/Transaction_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Records_Processed__c</columns>
    <columns>Total_Records_Sent_Successfully__c</columns>
    <columns>Program__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>